Updates towards v0.11 (#458)
* Migrated backend to use react 19

Needs kotlin version >=2.1.0 and gradle >=8.14

* Updated playAnimation to correct usage

* Improved docs performance by reducing source sizes

* Version bumps

* Manual merge for changes from v0.10

* Updated to newer kotlin-dsl for application plugin

* Update dependencies and version for Ktor, fileupload2 and intellij-coverage-reporter

* Add Vite configuration and update imports for Vaadin feature flags

* Update Vaadin dependencies to version 24.7.1 and adjust related packages

* Update .gitignore to exclude generated frontend files and bundles

* Update Kover configuration and upgrade Kover plugin version to 0.9.1

* Refactor Kover configuration and update Vaadin imports for improved structure and functionality

* Changed behavior of force exiting the BoardGameApplication

* Adjustments to publishing process

Waiting for dokka 2.1.0 to resolve https://github.com/Kotlin/dokka/issues/3472

* Updated dokka to 2.1.0

* Removed temporary comment

* Fixed bgw-docs based on new dokka tasks

* New animation handling

* Multiple animation tests that need to be combined
Still missing different animation types and new reset system

* Disallow starting animations on components that are currently animating

* Applied spotless I guess

* Added reverting of animations

* Exit improvements

* Fixed flickering

* Persist animations without onFinished

* Lifted restrictions on changing currently animating attributes

* Used css properties way more efficiently

* Changed logger with debug mode enabled

* Readded stopping all running animations.

* Readded AnimationInterpolation for ComponentAnimations that support it.

* Flip animation tests

* Flip-, Dice- and RandomizeAnimation (currently without proper persist logic)

* Added some todos as reminders

* Added persistence to all component animations

* Readded DelayAnimations

* Some draggable styling adjustments

* Some DnD Fixes but more bugs

* Proof-of-concept