@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2025 The BoardGameWork Authors
+ * Copyright 2022-2026 The BoardGameWork Authors
  * SPDX-License-Identifier: Apache-2.0
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -26,4 +26,15 @@ dependencies {
   implementation(project(":bgw-gui", configuration = "jvmRuntimeElements"))
   implementation(project(":bgw-net:bgw-net-client"))
   implementation(project(":bgw-net:bgw-net-common"))
+}
+
+application {
+  applicationDefaultJvmArgs =
+      listOf(
+          "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
+          "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
+          "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
+          "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
+          "--enable-native-access=ALL-UNNAMED")
+  mainClass = "examples.components.container.ContainerExampleKt"
 }
